<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mati.login_registration.Email_Verification">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">


        <ImageView
            android:contentDescription="@string/image"
            android:layout_width="200dp"
            android:layout_height="170dp"
            android:src="@drawable/icon"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification"
            android:textColor="@color/textColor"
            android:textStyle="bold|italic"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:id="@+id/again"
            android:layout_height="wrap_content"
            android:background="@color/button"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginBottom="10dp"
            android:text="@string/sendAgain"/>


        <Button
            android:layout_width="match_parent"
            android:id="@+id/logout"
            android:layout_height="wrap_content"
            android:background="@color/button"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginBottom="20dp"
            android:text="@string/logout"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
